WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152096
Modern IDB: storage/indexeddb/intversion-close-between-events.html fails
https://bugs.webkit.org/show_bug.cgi?id=152096
Summary
Modern IDB: storage/indexeddb/intversion-close-between-events.html fails
Brady Eidson
Reported
2015-12-09 14:43:32 PST
Modern IDB: storage/indexeddb/intversion-close-between-events.html fails JSIDBDatabase::transaction incorrectly handles DOMStringLists
Attachments
Patch v1
(3.23 KB, patch)
2015-12-09 14:51 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-09 14:51:44 PST
Created
attachment 267048
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-12-09 15:40:39 PST
Comment on
attachment 267048
[details]
Patch v1 Clearing flags on attachment: 267048 Committed
r193875
: <
http://trac.webkit.org/changeset/193875
>
WebKit Commit Bot
Comment 3
2015-12-09 15:40:42 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4
2015-12-09 19:27:35 PST
Comment on
attachment 267048
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=267048&action=review
> Source/WebCore/bindings/js/JSIDBDatabaseCustom.cpp:102 > + scope = Vector<String>(*domStringList);
I’m surprised the cast here is needed. Wouldn’t the assignment work without the constructor syntax?
Brady Eidson
Comment 5
2015-12-10 09:04:49 PST
(In reply to
comment #4
)
> Comment on
attachment 267048
[details]
> Patch v1 > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=267048&action=review
> > > Source/WebCore/bindings/js/JSIDBDatabaseCustom.cpp:102 > > + scope = Vector<String>(*domStringList); > > I’m surprised the cast here is needed. Wouldn’t the assignment work without > the constructor syntax?
Followed up in
https://trac.webkit.org/changeset/193909
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug