Modern IDB: storage/indexeddb/intversion-close-between-events.html fails. https://bugs.webkit.org/show_bug.cgi?id=152096

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* bindings/js/JSIDBDatabaseCustom.cpp:
(WebCore::JSIDBDatabase::transaction): In addition to JSArrays, treat DOMStringLists as a valid string sequence.

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/170236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193875 268f45cc-cd09-0410-ab3c-d52691b4dbfc